--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <script src="js/navbar.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
@@ -98,6 +99,7 @@
             <div class="container my-auto">
             </div>
         </section>
+        
         <section id="services">
             <div class="container">
                 <div class="row">
@@ -242,5 +244,40 @@
             </div>
         </section>
 
+        <footer>
+            <div class="container">
+               <br><br>
+               <div class="row">
+                  <div class="col-lg-8 mx-auto text-center">
+                     <h2 class="section-heading">Contacto</h2>
+                     <hr class="my-4">
+                     <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso, oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-lg-4 ml-auto text-center">
+                     <i ngsReveal class="fa fas fa-address-card fa-3x mb-3 sr-contact"></i>
+                     <p>Sergio García Agreda Ph.D.</p>
+                     <p>Director de internacionalización postgrado</p>
+                  </div>
+                  <div class="col-lg-4 ml-auto text-center">
+                     <i ngsReveal class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+                     <p>+591 775-19190</p>
+                  </div>
+                  <div class="col-lg-4 mr-auto text-center">
+                     <i ngsReveal class="fa fas fa-envelope fa-3x mb-3 sr-contact"></i>
+                     <p>
+                        <a href="sergiogarciaagreda@upb.edu">sgarciaagreda@upb.edu</a>
+                     </p>
+                  </div>
+               </div>
+               <br><br><br><br>
+            </div>
+            <div class="py-5 bg-dark">
+               <div class="container">
+                  <p class="m-0 text-center text-white">Copyright &copy; UPB 2018</p>
+               </div>
+            </div>
+         </footer>
     </body>
 </html>
