--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="container my-auto">
                     <div class="row">
                         <div class="col-md-10 mx-auto">
-                            <h1 class="text-uppercase">
+                            <h1 class="text-uppercase text-white">
                                 <strong>INTERNACIONALIZACIÓN<br>POSTGRADO UPB</strong>
                             </h1>
                             <hr class="light my-4">
