--- a/programas-internacionales.html
+++ b/programas-internacionales.html
@@ -1,53 +1,111 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css"/>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="main" style="padding-top: 75px">
-            <div class="container">
-               <div class="row">
-                  <div class="col-md-5th-1 col-sm-4 col-md-offset-0 col-sm-offset-2 text-center">
-                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-file-alt sr-icons"></i>
-                        <h3 class="mb-3"><a href="/lista?uprooqpqq4g">Programas de doble titulación</a></h3>
-                     </div>
-                  </div>
-                  <div class="col-md-5th-1 col-sm-4 text-center">
-                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-users sr-icons"></i>
-                        <h3 class="mb-3"><a href="/lista?nk8fj27abd">Programas de alta dirección</a></h3>
-                     </div>
-                  </div>
-                  <div class="col-md-5th-1 col-sm-4 text-center">
-                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="/lista?s0nxkup5qun">Programas de alta gerencia</a></h3>
-                     </div>
-                  </div>
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+   </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+   </script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+   </script>
+</head>
+
+<body>
+   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+      <div class="container">
+         <a href="/" id="logo1" class="navbar-brand"><img
+               src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
+               style="height: 60px;"></a>
+         <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
+            data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="index.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Inicio</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="convenios.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Convenios</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="convenios.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="convenios.html">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="/contacto">
+                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Contacto</p>
+                  </a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </nav>
+   <div class="main" style="padding-top: 75px">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-5th-1 col-sm-4 col-md-offset-0 col-sm-offset-2 text-center">
+               <div class="service-box mt-5 mx-auto">
+                  <i class="fas fa-4x fa-file-alt sr-icons"></i>
+                  <h3 class="mb-3"><a href="/lista?uprooqpqq4g">Programas de doble titulación</a></h3>
                </div>
-               <div class="row justify-content-center">
-                  <div class="col col-md-offset-5 text-center">
-                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                        <h3 class="mb-3"><a href="/lista?u61yoivk0in">Programas de certificación ejecutiva</a></h3>
-                     </div>
-                  </div>
-                  <div class="col col-md-offset-5 text-center">
-                     <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                        <h3 class="mb-3"><a href="/lista?t1tpalsg6t9">Programas de certificación ejecutiva internacional</a></h3>
-                     </div>
-                  </div>
+            </div>
+            <div class="col-md-5th-1 col-sm-4 text-center">
+               <div class="service-box mt-5 mx-auto">
+                  <i class="fas fa-4x fa-users sr-icons"></i>
+                  <h3 class="mb-3"><a href="/lista?nk8fj27abd">Programas de alta dirección</a></h3>
+               </div>
+            </div>
+            <div class="col-md-5th-1 col-sm-4 text-center">
+               <div class="service-box mt-5 mx-auto">
+                  <i class="fas fa-4x fa-user-tie sr-icons"></i>
+                  <h3 class="mb-3"><a href="/lista?s0nxkup5qun">Programas de alta gerencia</a></h3>
                </div>
             </div>
          </div>
-    </body>
+         <div class="row justify-content-center">
+            <div class="col col-md-offset-5 text-center">
+               <div class="service-box mt-5 mx-auto">
+                  <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
+                  <h3 class="mb-3"><a href="/lista?u61yoivk0in">Programas de certificación ejecutiva</a></h3>
+               </div>
+            </div>
+            <div class="col col-md-offset-5 text-center">
+               <div class="service-box mt-5 mx-auto">
+                  <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
+                  <h3 class="mb-3"><a href="/lista?t1tpalsg6t9">Programas de certificación ejecutiva internacional</a>
+                  </h3>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</body>
+
 </html>
