--- a/index-e.html
+++ b/index-e.html
@@ -38,33 +38,33 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="">
-                            <p class="elemento-navbar">Inicio</p>
+                        <a class="nav-link js-scroll-trigger" href="index.html">
+                            <p class="elemento-navbar">Home</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="programas-internacionales.html">
-                            <p class="elemento-navbar">Programas internacionales</p>
+                        <a class="nav-link js-scroll-trigger" href="international-programs.html">
+                            <p class="elemento-navbar">International programs</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/convenios">
-                            <p class="elemento-navbar">Convenios</p>
+                        <a class="nav-link js-scroll-trigger" href="agreements.html">
+                            <p class="elemento-navbar">Agreements</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/membresias">
-                            <p class="elemento-navbar">Membresías</p>
+                            <p class="elemento-navbar">Memberships</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/actividades">
-                            <p class="elemento-navbar">Actividades</p>
+                            <p class="elemento-navbar">Activities</p>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/contacto">
-                            <p class="elemento-navbar">Contacto</p>
+                            <p class="elemento-navbar">Contact</p>
                         </a>
                     </li>
                 </ul>
@@ -78,16 +78,16 @@
                 <div class="row">
                     <div class="col-md-10 mx-auto">
                         <h1 class="text-uppercase text-white">
-                            <strong>INTERNACIONALIZACIÓN<br>POSTGRADO UPB</strong>
+                            <strong>INTERNATIONALIZATION<br>POSTGRADUATE UPB</strong>
                         </h1>
                         <hr class="light my-4">
                     </div>
                     <div class="col-md-8 mx-auto mb-5">
-                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Aprende más</a>
+                        <a pageScroll class="btn btn-primary btn-xl js-scroll-trigger" href="#about">LEARN MORE</a>
                     </div>
                 </div>
                 <button id="botonSonido" class="fas fa-music fa-2x"></button>
-                <a href="index-e.html" id="botonIdioma">English</a>
+                <a href="index.html" id="botonIdioma">Español</a>
             </div>
         </section>
         <div class="fullscreen-bg">
@@ -103,14 +103,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="section-heading text-white">Tenemos lo que necesitas</h2>
+                    <h2 class="section-heading text-white">We have what you need</h2>
                     <hr class="light my-4">
-                    <p class="text-faded mb-4">Convenios para impartir maestrías de doble titulación, intercambio de
-                        docentes y estudiantes, asesoramiento académico entre otras cláusulas particulares con cada una
-                        de las universidades socias. Asimismo, la UPB es miembro activo de asociaciones
-                        que agrupan a las principales escuelas de negocios de Latinoamérica y Europa.</p>
+                    <p class="text-faded mb-4">
+                        Agreements to teach double degree masters, exchange of
+                        teachers and students, academic advice among other particular clauses with each
+                        of partner universities. Likewise, the UPB is an active member of associations
+                        which bring together the main business schools in Latin America and Europe.</p>
                     <a pageScroll class="btn btn-light btn-xl js-scroll-trigger" style="color: rgb(41,47,109)"
-                        href="#services">¡Empieza ahora!</a>
+                        href="#services">¡Start now!</a>
                 </div>
             </div>
         </div>
@@ -126,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">A tu servicio</h2>
+                    <h2 class="section-heading">At your service</h2>
                     <hr class="my-4">
                 </div>
             </div>
@@ -137,29 +138,31 @@
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_programas_internacionales"
                             class="fa fa-4x far fa-list-alt text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/programas">Programas internacionales</a></h3>
-                        <p class="text-muted mb-0">Diseñados para desarrollar profesionales con visión global.</p>
+                        <h3 class="mb-3"><a href="/programas">International programs</a></h3>
+                        <p class="text-muted mb-0">
+                            Designed to develop professionals with a global vision.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_convenios" class="fa fa-4x far fa-handshake text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/convenios">Convenios</a></h3>
-                        <p class="text-muted mb-0">Las universidades que nos apoyan en nuestros programas.</p>
+                        <h3 class="mb-3"><a href="/convenios">Agreements</a></h3>
+                        <p class="text-muted mb-0">
+                            The universities that support us in our programs.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_membresias" class="fa fa-4x fas fa-globe text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/membresias">Membresías</a></h3>
-                        <p class="text-muted mb-0">Revisa nuestras últimas membresías.</p>
+                        <h3 class="mb-3"><a href="/membresias">Memberships</a></h3>
+                        <p class="text-muted mb-0">Check our latest memberships.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i id="icono_actividades" class="fa fa-4x far fa-newspaper text-primary mb-3 sr-icons"></i>
-                        <h3 class="mb-3"><a href="/actividades">Actividades internacionales</a></h3>
-                        <p class="text-muted mb-0">La actualidad de nuestra universidad.</p>
+                        <h3 class="mb-3"><a href="/actividades">Activities</a></h3>
+                        <p class="text-muted mb-0">The news of our university.</p>
                     </div>
                 </div>
             </div>
@@ -176,7 +179,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Universitat Politècnica de València
@@ -193,7 +196,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Florida Gulf Coast University
@@ -210,7 +213,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     SIAS International University
@@ -227,7 +230,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     INCAE
@@ -244,7 +247,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     ESAN
@@ -260,7 +263,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Programa internacional
+                                    International program
                                 </div>
                                 <div class="project-name">
                                     Universidad de Santiago de Chile
@@ -283,17 +286,17 @@
             <br><br>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h2 class="section-heading">Contacto</h2>
+                    <h2 class="section-heading">Contact</h2>
                     <hr class="my-4">
-                    <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                    <address class="mb-5">UPB Campus. Cochabamba, Bolivia.<br>Postgraduate building on the third floor,
+                        I internationalization office.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 ml-auto text-center">
                     <i ngsReveal class="fa fas fa-address-card fa-3x mb-3 sr-contact"></i>
                     <p>Sergio García Agreda Ph.D.</p>
-                    <p>Director de internacionalización postgrado</p>
+                    <p>Director of postgraduate internationalization</p>
                 </div>
                 <div class="col-lg-4 ml-auto text-center">
                     <i ngsReveal class="fa fa-phone fa-3x mb-3 sr-contact"></i>
