--- a/programas-internacionales.html
+++ b/programas-internacionales.html
@@ -106,6 +106,42 @@
          </div>
       </div>
    </div>
+   <footer>
+      <div class="container">
+         <br><br>
+         <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+               <h2 class="section-heading">Contacto</h2>
+               <hr class="my-4">
+               <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
+                  I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-lg-4 ml-auto text-center">
+               <i ngsReveal class="fa fas fa-address-card fa-3x mb-3 sr-contact"></i>
+               <p>Sergio García Agreda Ph.D.</p>
+               <p>Director de internacionalización postgrado</p>
+            </div>
+            <div class="col-lg-4 ml-auto text-center">
+               <i ngsReveal class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+               <p>+591 775-19190</p>
+            </div>
+            <div class="col-lg-4 mr-auto text-center">
+               <i ngsReveal class="fa fas fa-envelope fa-3x mb-3 sr-contact"></i>
+               <p>
+                  <a href="sergiogarciaagreda@upb.edu">sgarciaagreda@upb.edu</a>
+               </p>
+            </div>
+         </div>
+         <br><br><br><br>
+      </div>
+      <div class="py-5 bg-dark">
+         <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; UPB 2019</p>
+         </div>
+      </div>
+   </footer>
 </body>
 
 </html>
