--- a/index.html
+++ b/index.html
@@ -48,23 +48,18 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/convenios">
+                        <a class="nav-link js-scroll-trigger" href="convenios.html">
                             <p class="elemento-navbar">Convenios</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/membresias">
+                        <a class="nav-link js-scroll-trigger" href="/">
                             <p class="elemento-navbar">Membresías</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/actividades">
+                        <a class="nav-link js-scroll-trigger" href="actividades.html">
                             <p class="elemento-navbar">Actividades</p>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/contacto">
-                            <p class="elemento-navbar">Contacto</p>
                         </a>
                     </li>
                 </ul>
@@ -282,19 +277,6 @@
             <br><br>
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    height: 100vh;
-                    min-height: 650px;
-                    padding-top: 0;
-                    padding-bottom: 0;
-                    }
-
-                    section.masthead h1 {
-                    font-size: 3rem;
-                    }
-                    }
-
-                    @media (min-width: 1200px) {
-                    section.masthead h1 {
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
                     <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
