--- a/lista-programas.html
+++ b/lista-programas.html
@@ -39,12 +39,12 @@
                   </a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/programas">
+                  <a class="nav-link js-scroll-trigger" href="lista-programas.html">
                      <p class="elemento-navbar" style="color: rgb(41,47,109)">Programas internacionales</p>
                   </a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/convenios">
+                  <a class="nav-link js-scroll-trigger" href="convenios.html">
                      <p class="elemento-navbar" style="color: rgb(41,47,109)">Convenios</p>
                   </a>
                </li>
@@ -54,13 +54,8 @@
                   </a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/actividades">
+                  <a class="nav-link js-scroll-trigger" href="actividades.html">
                      <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
-                  </a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/contacto">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Contacto</p>
                   </a>
                </li>
             </ul>
