--- a/programas-internacionales.html
+++ b/programas-internacionales.html
@@ -54,13 +54,8 @@
                   </a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="convenios.html">
+                  <a class="nav-link js-scroll-trigger" href="actividades.html">
                      <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
-                  </a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link js-scroll-trigger" href="/contacto">
-                     <p class="elemento-navbar" style="color: rgb(41,47,109)">Contacto</p>
                   </a>
                </li>
             </ul>
