--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/convenios">
+                        <a class="nav-link js-scroll-trigger" href="convenios.html">
                             <p class="elemento-navbar">Convenios</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/membresias">
+                        <a class="nav-link js-scroll-trigger" href="membresias.html">
                             <p class="elemento-navbar">Membresías</p>
                         </a>
                     </li>
