--- a/actividades.html
+++ b/actividades.html
@@ -26,7 +26,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
         <div class="container">
-            <a href="/" id="logo1" class="navbar-brand"><img
+            <a href="index.html" id="logo1" class="navbar-brand"><img
                     src="https://firebasestorage.googleapis.com/v0/b/inter-8999f.appspot.com/o/Marcas%20UPB-07.png?alt=media&token=f0be8581-a970-41d5-80a5-fc3a6d2df0a2"
                     style="height: 60px;"></a>
             <button class="navbar-toggler navbar-toggler-right" (click)="toggleNavbar()" type="button"
@@ -52,7 +52,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/">
+                        <a class="nav-link js-scroll-trigger" href="membresias.html">
                             <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
                         </a>
                     </li>
