--- a/convenios.html
+++ b/convenios.html
@@ -49,7 +49,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="convenios.html">
+                        <a class="nav-link js-scroll-trigger" href="membresias.html">
                             <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
                         </a>
                     </li>
