--- a/programas-alta-direccion.html
+++ b/programas-alta-direccion.html
@@ -62,43 +62,12 @@
          </div>
       </div>
    </nav>
-   <div class="main" style="padding-top: 75px">
-      <div class="container">
-         <div class="row">
-            <div class="col-md-5th-1 col-sm-4 col-md-offset-0 col-sm-offset-2 text-center">
-               <div class="service-box mt-5 mx-auto">
-                  <i class="fas fa-4x fa-file-alt sr-icons"></i>
-                  <h3 class="mb-3"><a href="programas-doble-titulacion.html">Programas de doble titulación</a></h3>
-               </div>
-            </div>
-            <div class="col-md-5th-1 col-sm-4 text-center">
-               <div class="service-box mt-5 mx-auto">
-                  <i class="fas fa-4x fa-users sr-icons"></i>
-                  <h3 class="mb-3"><a href="programas-alta-direccion.html">Programas de alta dirección</a></h3>
-               </div>
-            </div>
-            <div class="col-md-5th-1 col-sm-4 text-center">
-               <div class="service-box mt-5 mx-auto">
-                  <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                  <h3 class="mb-3"><a href="programas-alta-gerencia.html">Programas de alta gerencia</a></h3>
-               </div>
-            </div>
-         </div>
-         <div class="row justify-content-center">
-            <div class="col col-md-offset-5 text-center">
-               <div class="service-box mt-5 mx-auto">
-                  <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                  <h3 class="mb-3"><a href="programas-certificacion-ejecutiva.html">Programas de certificación ejecutiva</a></h3>
-               </div>
-            </div>
-            <div class="col col-md-offset-5 text-center">
-               <div class="service-box mt-5 mx-auto">
-                  <i class="fas fa-4x fa-chalkboard-teacher sr-icons"></i>
-                  <h3 class="mb-3"><a href="http://www.upb.edu/es">Programas de certificación ejecutiva internacional</a>
-                  </h3>
-               </div>
-            </div>
-         </div>
+   <div class="container" style="padding-top: 75px">
+      <h1 class="my-4">Programas de alta dirección</h1>
+      <div class="card mb-4">
+         <a href="http://www.upb.edu/es/">
+            <img class="card-img-top" src="images/programas/pade.jpg">
+         </a>
       </div>
    </div>
    <footer>
