Añadiendo sección noticias

--- a/eventos.html
+++ b/eventos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noticias</title>
+    <title>Eventos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
@@ -50,12 +50,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="/">
+                        <a class="nav-link js-scroll-trigger" href="convenios.html">
                             <p class="elemento-navbar" style="color: rgb(41,47,109)">Membresías</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="actividades.html">
+                        <a class="nav-link js-scroll-trigger" href="convenios.html">
                             <p class="elemento-navbar" style="color: rgb(41,47,109)">Actividades</p>
                         </a>
                     </li>
@@ -63,29 +63,11 @@
             </div>
         </div>
     </nav>
-
     <div class="principal">
         <div class="container">
-            <div class="row">
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-users sr-icons"></i>
-                        <h3 class="mb-3"><a href="eventos.html">Eventos internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="visitas.html">Visitas internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="foros.html">Foros internacionales</a></h3>
-                    </div>
-                </div>
-            </div>
+            <h1>EDSA</h1>
+            <p style="text-align: center"><img class="img-fluid event" src="images/eventos/edsa.jpg" />
+            </p>
         </div>
     </div>
 
@@ -97,7 +79,7 @@
                     <h2 class="section-heading">Contacto</h2>
                     <hr class="my-4">
                     <address class="mb-5">Campus UPB. Cochabamba, Bolivia.<br>Edificio postgrado en el tercer piso,
-                        I oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
+                        oficina de internacionalización.<br>Av. Capitán Ustariz Km. 6,5.</address>
                 </div>
             </div>
             <div class="row">
@@ -121,11 +103,10 @@
         </div>
         <div class="py-5 bg-dark">
             <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; UPB 2019</p>
+                <p class="m-0 text-center text-white">Copyright &copy; UPB 2018</p>
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
