--- a/foros.html
+++ b/foros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noticias</title>
+    <title>Foros</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
@@ -64,31 +64,25 @@
         </div>
     </nav>
 
-    <div class="principal">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-users sr-icons"></i>
-                        <h3 class="mb-3"><a href="eventos.html">Eventos internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="visitas.html">Visitas internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="foros.html">Foros internacionales</a></h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="container" style="padding-top: 100px;">
+        <h1>Foro internacional de La Paz</h1>
+        <p ALIGN="justify">
+            En el foro Internacional sobre globalización que se realizó en la FEPC el día Jueves 20 de septiembre, se
+            tuvo a Menahem Prywes Ph. D. en Economía, como orador principal, quien fue Economista Senior del Banco
+            Mundial en Washington D.C., con amplia experiencia en campo en el área del desarrollo local, evaluación de
+            la pobreza, trabajó por más de 10 años en África en la re-estructuración de zonas post conflictos bélicos y
+            manejo de presupuestos gubernamentales
+        </p>
 
+        <p ALIGN="justify">Tres importantes eventos académicos se han realizado esta segunda quincena de Agosto, en
+            beneficio de la
+            comunidad UPB, el primero fue el Taller cerrado "GlobalSales" para Maestrantes con Christian Navia MSc., al
+            que además asistieron miembros del Alumni Postgrado La Paz, el segundo fue la Conferencia de "VULNERABILIDAD
+            SÍSMICA DE ESTRUCTURAS" con la Escuela de Graduados de Ingeniería dictada por M.Sc. Ing. Jorge Luis Zambrano
+            López, abierta para el público en general donde asistieron, tanto Alumnos de Pregrado, postgrado, Ex alumnos
+            y profesionales de La Paz, el tercer evento fue una conferencia de Negocios Digitales en la FEPO organizado
+            por la asociación de Alumni de Oruro dictada por Sergio García Agreda Ph. D.</p>
+    </div>
     <footer>
         <div class="container">
             <br><br>
@@ -125,7 +119,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
