--- a/visitas.html
+++ b/visitas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Noticias</title>
+    <title>Visitas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
@@ -64,29 +64,12 @@
         </div>
     </nav>
 
-    <div class="principal">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-users sr-icons"></i>
-                        <h3 class="mb-3"><a href="eventos.html">Eventos internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="visitas.html">Visitas internacionales</a></h3>
-                    </div>
-                </div>
-                <div class="col-sm text-center">
-                    <div class="service-box mt-5 mx-auto">
-                        <i class="fas fa-4x fa-user-tie sr-icons"></i>
-                        <h3 class="mb-3"><a href="foros.html">Foros internacionales</a></h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="container principal">
+        <h1>Renovación de convenio UPB y UPV</h1>
+        <p>Celebramos la renovación del convenio que tenemos entre la Universidad Privada Boliviana y la Universitat
+            Politècnica de València UPV</p>
+        <p id="abajo" style="text-align: center; width: 100%"><img class="img-fluid image"
+                src="images/visitas/convenio UPB UPV-01.jpg" alt=""></p>
     </div>
 
     <footer>
@@ -125,7 +108,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
